force-app/main/default/objects/BPCL_Transaction__c/BPCL_Transaction__c.object-meta.xml
<CustomObject>
    <label>BPCL_Transaction</label>
    <nameField>
        <label>BPCL_Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BPCL_Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>