force-app/main/default/objects/BPCL_Transaction__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <label>amount</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>