force-app/main/default/objects/BPCL_Transaction__c/fields/amountDebited__c.field-meta.xml
<CustomField>
    <fullName>amountDebited__c</fullName>
    <label>amountDebited</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>