force-app/main/default/objects/BPCL_Transaction__c/fields/cardId__c.field-meta.xml
<CustomField>
    <fullName>cardId__c</fullName>
    <label>cardId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>