force-app/main/default/objects/BPCL_Transaction__c/fields/channel__c.field-meta.xml
<CustomField>
    <fullName>channel__c</fullName>
    <label>channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>