force-app/main/default/objects/BPCL_Transaction__c/fields/expenseType__c.field-meta.xml
<CustomField>
    <fullName>expenseType__c</fullName>
    <label>expenseType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>