force-app/main/default/objects/BPCL_Transaction__c/fields/fuelQuantity__c.field-meta.xml
<CustomField>
    <fullName>fuelQuantity__c</fullName>
    <label>fuelQuantity</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>