force-app/main/default/objects/BPCL_Transaction__c/fields/transactionDate__c.field-meta.xml
<CustomField>
    <fullName>transactionDate__c</fullName>
    <label>transactionDate</label>
    <type>DateTime</type>
</CustomField>