force-app/main/default/objects/BPCL_Transaction__c/fields/transactionType__c.field-meta.xml
<CustomField>
    <fullName>transactionType__c</fullName>
    <label>transactionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>